@@ -73,8 +73,10 @@ public class ServletObservacao extends HttpServlet {
 
     private void buscarPorId(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
+        System.out.println("Entrou!!!!!!!!!!!!!!");
 
         int alunoId = Integer.parseInt(request.getParameter("id"));
+        System.out.println(alunoId);
 
         Usuario usuario = (Usuario) request.getSession().getAttribute("usuario");
         int professorId = usuario.getId();
@@ -92,14 +94,17 @@ public class ServletObservacao extends HttpServlet {
         }
 
         List<Aluno> alunos = alunoDAO.listarMatricula(alunoId);
+        System.out.println("Alunos: " + alunos.getFirst().getNome());
+
         Aluno aluno = null;
 
         if(alunos != null && !alunos.isEmpty()){
-            aluno = alunos.get(0);
+            aluno = alunos.getFirst();
         }
 
         request.setAttribute("observacoes", filtradas);
         request.getSession().setAttribute("alunoSelecionado", aluno);
+        System.out.println("Aluno: " + aluno);
 
         encaminhar(request, response, "/views/observacoes.jsp");
 
